SFUSA/force-app/main/default/objects/Purchase_Order__c/fields/Barrel_Order_Number__c.field-meta.xml
<CustomField>
        <fullName>Barrel_Order_Number__c</fullName>
        <label>Barrel Order Number</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>