SFUSA/force-app/main/default/objects/Purchase_Order__c/fields/Case__c.field-meta.xml
<CustomField>
        <fullName>Case__c</fullName>
        <description>Related Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>