SFUSA/force-app/main/default/objects/Purchase_Order__c/fields/Failed__c.field-meta.xml
<CustomField>
        <fullName>Failed__c</fullName>
        <label>Failed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>