SFUSA/force-app/main/default/objects/Purchase_Order__c/fields/Inco_Terms_Changed__c.field-meta.xml
<CustomField>
        <fullName>Inco_Terms_Changed__c</fullName>
        <label>Inco Terms Changed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>