SFUSA/force-app/main/default/objects/Purchase_Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>