SFUSA/force-app/main/default/objects/Purchase_Order__c/fields/Other_Issue__c.field-meta.xml
<CustomField>
        <fullName>Other_Issue__c</fullName>
        <label>Other Issue</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>