SFUSA/force-app/main/default/objects/Purchase_Order__c/fields/PO_Number_of_Pooled_Order__c.field-meta.xml
<CustomField>
        <fullName>PO_Number_of_Pooled_Order__c</fullName>
        <label>PO Number of Pooled Order</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>