SFUSA/force-app/main/default/objects/Purchase_Order__c/fields/Reason__c.field-meta.xml
<CustomField>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </CustomField>