SFUSA/force-app/main/default/objects/Purchase_Order__c/fields/SAP_No_Updated_Within_SLA__c.field-meta.xml
<CustomField>
        <fullName>SAP_No_Updated_Within_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be updated through workflow.</description>
        <label>SAP No Updated Within SLA</label>
        <type>Checkbox</type>
    </CustomField>