SFUSA/force-app/main/default/objects/Purchase_Order__c/fields/SKU__c.field-meta.xml
<CustomField>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <type>TextArea</type>
    </CustomField>